# statuslight-configuration-tool

./: .gitignore  .ncurc.json  .prettierignore  README.md  commands.md  components.json  contributing.md  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  version.json  vite.config.ts
.github/workflows/: audit.yml  format.yml  lint.yml  release.yml  releases.yml
src/: App.svelte  app.css  app.d.ts  hooks.client.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: SerialError.ts  SerialErrors.ts  SerialPort.ts
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  prelude.rs  uart.rs
src-tauri/src/model/: controller.rs  mod.rs  system.rs  uart.rs  utils.rs
src-tauri/src/serial/: controller.rs  mod.rs  serial.rs  state.rs
src-tauri/src/store/: mod.rs
src-tauri/test/: mock_runtimes.rs  mod.rs
src/components/: CurrentConfig.svelte  Edit.svelte  EditConfig.svelte  EditParameters.svelte  Footer.svelte  Header.svelte  Loading.svelte  Modal.svelte  NavBar.svelte  RPM.svelte  Sidebar.svelte  Stylesheet.svelte  Topbar.svelte
src/components/form/: SelectField.svelte
src/lib/: API.ts  Config.ts  ShiftLight.ts  Shiftlight.ts  Store.ts  Toasts.ts  Validator.ts  api.ts  config.ts  stores.ts  validator.ts
src/lib/components/: EditConfig.svelte  EditParameters.svelte  Footer.svelte  Loading.svelte  Modal.svelte  Sidebar.svelte  Topbar.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/edit/: +page.svelte  +page.ts
src/routes/edit/advanced/: +page.svelte
src/routes/edit/basics/: +page.svelte
src/routes/update/: +page.svelte
src/schemas/: config.ts  editSchema.ts
src/stores/: session.ts
src/types/: config.ts
