[package]
name = "app"
version = "0.2.1"
description = "A Tauri App to configure the KE ShiftLight"
authors = ["craig@kaiserengineering.io", "matt@kaiserengineering.io"]
license = ""
repository = "https://github.com/KaiserEngineering/shiftlight-configuration-tool"
default-run = "app"
edition = "2021"
rust-version = "1.68"
    
[build-dependencies]
tauri-build = { git  = "https://github.com/tauri-apps/tauri.git", branch="dev", features = [] }
cc = "1.0"

[dependencies]
anyhow = "1.0.65"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha", features = [] }
serialport = { version = "4.2.0", features = [] }
mockall = "0.11.2"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.12"
ts-rs = "6.2"
# tauri-plugin-serial = { git  = "https://github.com/kaiserengineering/tauri-plugin-serial.git", branch="main"}
tauri-plugin-serial = { path  = "/Users/craigkaiser/kaiserengineering/tauri-plugin-serial"}
tauri-plugin-window = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-app = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-os = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
