[package]
name = "keshiftlight_configuration_tool"
version = "0.2.1"
description = "A Tauri App to configure the KE ShiftLight"
authors = ["craig@kaiserengineering.io", "matt@kaiserengineering.io"]
license = ""
repository = "https://github.com/KaiserEngineering/shiftlight-configuration-tool"
edition = "2021"
rust-version = "1.68"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
cc = "1.0"

[dependencies]
anyhow = "1.0.65"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["unstable"] }
serialport = { version = "4.2.0", features = [] }
mockall = "0.11.2"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.12"
ts-rs = "6.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "keshiftlight_configuration_tool_lib"
crate-type = ["lib", "cdylib"]
